# toygit

./: .gitignore  .pr_agent.toml  LICENSE  README.md
.github/workflows/: python-ci.yml
python/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python/tests/: test_add.py  test_cat_file.py  test_cli.py  test_git_objects.py  test_init.py
python/toygit/: __init__.py  cli.py
python/toygit/commands/: __init__.py  add.py  cat_file.py  init.py
python/toygit/core/: __init__.py  git_objects.py
