[project]
name = "toygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.0",
]
