[project]
name = "toygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
toygit = "toygit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.0",
]
